* Renamed the typename from `pubres_t`  to `pubres_type` for consistency. #280
* Re-designed error_code handling respect to Boost.Asio way. #266, #270, 271, #272, #273
** All async functions has the Completion Handler signature as `void(async_mqtt::error_code, ...)`, except `void()`.
*** It works well with other Boost.Asio based libraries, and Boost.Asio itself.
=== other updates
* Added separate compilation mode support. #282
** To enable separate compilation mode, define ASYNC_MQTT_SEPARATE_COMPILATION
* Added bind_cancellation_slot test #268
* Supported PINGREQ overriding by ServerKeepAlive. #271
* Refined tests. #269, #274, #275
* Refined documents. #276
* Refined tools (bench) #278
* Added endpoint getter to client. #279

== 6.0.0
=== breaking changes
* Added `async_` prefix to all async functions to support default completion token. #238, #242
** Some of async/sync function overload had been conflicted. e.g) acquire_unique_packet_id().
* Unified naming rule of types to `*_type`. #232
* Refined type of PacketIdentifier. Now `packet_id_type` is the type. #231
* Moved include/async_mqtt/broker/*.hpp to tool/include/broker/*.hpp #224
** Those are for broker allication that is used for system testing.
* Re-organized directory strucure respect to boost libraries. #211, #229, #230, #234
** It affects the users only if include the specific header file directly.
* Re-desined strand handling. #206
** template parameter Strand is removed. Users can pass strand wrapped executor for multi threading.
** associated properties of the completion handler are correctly propagated.
* Removed buffer from packet interface except the infterface for adcanced user. #195, #262
** For example, create PUBLISH packet using "topic1", and get the filed as string by `topic()`.
*** No `allocate_buffer("topic1")` is required.
* Organized predefined headers. #194
** For mqtt, include `async_mqtt/all.hpp`. In addition,
** For mqtts, include `async_mqtt/predefined_layer/mqtts.hpp`