@@ -104,6 +104,24 @@ div#navigation table {
 </div>
 </li>
 <li>
+<p>Fixed set_pingreq_send_interval_ms() value 0 treatment. #290</p>
+</li>
+<li>
+<p>Fixed non exist topic alias treatment. #289</p>
+</li>
+<li>
+<p>Fixed connack packet sending condition on error. #288</p>
+</li>
+<li>
+<p>Fixed async_recv after cancel behave invalidly bug. #287</p>
+</li>
+<li>
+<p>Fixed cancel treatment. #286</p>
+</li>
+<li>
+<p>Added using recycling allocator option for the broker. #283</p>
+</li>
+<li>
 <p>Added separate compilation mode support. #282</p>
 <div class="ulist">
 <ul>
@@ -120,7 +138,7 @@ div#navigation table {
 <p>Supported PINGREQ overriding by ServerKeepAlive. #271</p>
 </li>
 <li>
-<p>Refined tests. #269, #274, #275</p>
+<p>Refined tests. #269, #274, #275, #287, #288, #289, #290</p>
 </li>
 <li>
 <p>Refined documents. #276</p>
