@@ -275,7 +275,7 @@ $(function(){initNavTree('endpoint_8hpp_source.html',''); initResizable(true); }
 <div class="line"><a id="l00272" name="l00272"></a><span class="lineno">  272</span><span class="preprocessor">#if !defined(GENERATING_DOCUMENTATION)</span></div>
 <div class="line"><a id="l00273" name="l00273"></a><span class="lineno">  273</span>    BOOST_ASIO_INITFN_AUTO_RESULT_TYPE(</div>
 <div class="line"><a id="l00274" name="l00274"></a><span class="lineno">  274</span>        CompletionToken,</div>
-<div class="line"><a id="l00275" name="l00275"></a><span class="lineno">  275</span>        <span class="keywordtype">void</span>(<a class="code hl_typedef" href="group__error.html#gaa100a3fca173f12e33f3b5711710033d">error_code</a>, <a class="code hl_struct" href="structasync__mqtt_1_1basic__packet__id__type.html">basic_packet_id_type&lt;PacketIdBytes&gt;</a>)</div>
+<div class="line"><a id="l00275" name="l00275"></a><span class="lineno">  275</span>        <span class="keywordtype">void</span>(<a class="code hl_typedef" href="group__error.html#gaa100a3fca173f12e33f3b5711710033d">error_code</a>, <span class="keyword">typename</span> <a class="code hl_struct" href="structasync__mqtt_1_1basic__packet__id__type.html">basic_packet_id_type&lt;PacketIdBytes&gt;::type</a>)</div>
 <div class="line"><a id="l00276" name="l00276"></a><span class="lineno">  276</span>    )</div>
 <div class="line"><a id="l00277" name="l00277"></a><span class="lineno">  277</span><span class="preprocessor">#endif </span><span class="comment">// !defined(GENERATING_DOCUMENTATION)</span></div>
 <div class="line"><a id="l00278" name="l00278"></a><span class="lineno"><a class="line" href="classasync__mqtt_1_1basic__endpoint.html#a7274b1d7f83634fd64fe616de1ff3e7f">  278</a></span>    <a class="code hl_function" href="classasync__mqtt_1_1basic__endpoint.html#a7274b1d7f83634fd64fe616de1ff3e7f">async_acquire_unique_packet_id</a>(</div>
@@ -288,7 +288,7 @@ $(function(){initNavTree('endpoint_8hpp_source.html',''); initResizable(true); }
 <div class="line"><a id="l00293" name="l00293"></a><span class="lineno">  293</span><span class="preprocessor">#if !defined(GENERATING_DOCUMENTATION)</span></div>
 <div class="line"><a id="l00294" name="l00294"></a><span class="lineno">  294</span>    BOOST_ASIO_INITFN_AUTO_RESULT_TYPE(</div>
 <div class="line"><a id="l00295" name="l00295"></a><span class="lineno">  295</span>        CompletionToken,</div>
-<div class="line"><a id="l00296" name="l00296"></a><span class="lineno">  296</span>        <span class="keywordtype">void</span>(<a class="code hl_typedef" href="group__error.html#gaa100a3fca173f12e33f3b5711710033d">error_code</a>, <a class="code hl_struct" href="structasync__mqtt_1_1basic__packet__id__type.html">basic_packet_id_type&lt;PacketIdBytes&gt;</a>)</div>
+<div class="line"><a id="l00296" name="l00296"></a><span class="lineno">  296</span>        <span class="keywordtype">void</span>(<a class="code hl_typedef" href="group__error.html#gaa100a3fca173f12e33f3b5711710033d">error_code</a>, <span class="keyword">typename</span> <a class="code hl_struct" href="structasync__mqtt_1_1basic__packet__id__type.html">basic_packet_id_type&lt;PacketIdBytes&gt;::type</a>)</div>
 <div class="line"><a id="l00297" name="l00297"></a><span class="lineno">  297</span>    )</div>
 <div class="line"><a id="l00298" name="l00298"></a><span class="lineno">  298</span><span class="preprocessor">#endif </span><span class="comment">// !defined(GENERATING_DOCUMENTATION)</span></div>
 <div class="line"><a id="l00299" name="l00299"></a><span class="lineno"><a class="line" href="classasync__mqtt_1_1basic__endpoint.html#a425e8172d00a1ace4274cf188d626de5">  299</a></span>    <a class="code hl_function" href="classasync__mqtt_1_1basic__endpoint.html#a425e8172d00a1ace4274cf188d626de5">async_acquire_unique_packet_id_wait_until</a>(</div>
